# maml

./: .gitignore  LICENSE  ML.cabal  Maml.cabal  README.txt  maml.cabal  stack.yaml  test-wasm.js  test.sml  test.wast
app/: Main.hs
lib/: .gitignore  Makefile  README.txt  memory.wasm  memory.wat  test.js
playground/: Main.hs  index.html
src/: AST.hs  Check.hs  CodeGen.hs  Env.hs  Error.hs  Linker.hs  Parser.hs  Type.hs  WasmParse.hs
src/CodeGen/: Export.hs  Expr.hs  Function.hs  Global.hs  Instruction.hs  Memory.hs  Start.hs  Types.hs  Util.hs
src/Linker/: Parse.hs
test/: CheckSpec.hs  CompileSpec.hs  ParsingSpec.hs  Spec.hs
test/programs/collatz/: collatz.maml  collatz.wast
test/programs/euler/: euler.maml  euler.wast
test/programs/factorial/: factorial.maml  factorial.wast
test/programs/fibonacci/: fibonacci.maml  fibonacci.wast
test/programs/if/: if.maml  if.wast
test/programs/numbers/: numbers.maml  numbers.wast
test/programs/simple/: simple.maml  simple.wasm  simple.wast  simple.wat
