name:                Maml
version:             0.1.0.0
author:              Ho-Yon Mak
maintainer:          hoyon.mak@gmail.com
copyright:           2017 Ho-Yon Mak
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser,
                       AST,
                       Check,
                       Error,
                       Type
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       megaparsec >= 6.2 && < 7,
                       mtl,
                       transformers,
                       protolude >= 0.2,
                       text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

executable Maml-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , Maml
                     , protolude >= 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

test-suite Maml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.4
                     , megaparsec >= 6.2 && < 7
                     , hspec-megaparsec >= 1.0.0
                     , text
                     , Maml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
