name:                Maml
version:             0.1.0.0
author:              Ho-Yon Mak
maintainer:          hoyon.mak@gmail.com
copyright:           2017 Ho-Yon Mak
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser,
                       AST,
                       Check,
                       Error,
                       Type,
                       Env,
                       CodeGen

  other-modules:       CodeGen.Util
                     , CodeGen.Global
                     , CodeGen.Instruction
                     , CodeGen.Function

  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring,
                       containers,
                       formatting,
                       lens,
                       megaparsec >= 6.2 && < 7,
                       mtl,
                       protolude >= 0.2,
                       text,
                       transformers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

executable Maml-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Maml
                     , base
                     , bytestring
                     , protolude >= 0.2
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

test-suite Maml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParsingSpec
                     , CheckSpec

  build-depends:       base
                     , hspec >= 2.4
                     , megaparsec >= 6.2 && < 7
                     , hspec-megaparsec >= 1.0.0
                     , protolude >= 0.2
                     , text
                     , Maml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
