name:                Maml
version:             0.1.0.0
author:              Ho-Yon Mak
maintainer:          hoyon.mak@gmail.com
copyright:           2017 Ho-Yon Mak
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , AST
                     , Check
                     , Error
                     , Type
                     , Env
                     , CodeGen
                     , WasmParse

  other-modules:       CodeGen.Util
                     , CodeGen.Expr
                     , CodeGen.Instruction
                     , CodeGen.Function
                     , CodeGen.Export
                     , CodeGen.Memory
                     , CodeGen.Start
                     , CodeGen.Types

  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , formatting
                     , megaparsec >= 6.2 && < 7
                     , mtl
                     , protolude >= 0.2
                     , text
                     , transformers
                     , monad-loops
                     , file-embed
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

executable Maml-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Maml
                     , base
                     , bytestring
                     , protolude >= 0.2
                     , text
                     , optparse-applicative
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

test-suite Maml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParsingSpec
                     , CheckSpec
                     , CompileSpec

  build-depends:       base
                     , hspec >= 2.4
                     , megaparsec >= 6.2 && < 7
                     , hspec-megaparsec >= 1.0.0
                     , protolude >= 0.2
                     , text
                     , directory
                     , bytestring
                     , process
                     , Maml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
